--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </nav>
     </header>
 
-    <main>
+    <!--Formulário para Cadastro de Novos Pokemons-->
         <section class="add-pokemon-form" data-container-form="form">
             <form class="form" data-form="form">
                 <h1>Cadastro de Pokemon</h1>
@@ -39,10 +39,12 @@
                 <button type="submit" data-btn-form="btnForm">Adicionar Pokemon</button>
             </form>
         </section>
-    </main>
 
     <!-- Container-API -->
     <section class="container-cards-pokemon" data-pokemon-card="pokemon-card"></section>
+
+    <!--Container of Add Pokemons-->
+    <section class="container-add-pokemon" data-pokemon-add="pokemon"></section>
 
     <!-- Script-of-Pages -->
     <script src="javascript/requestPokemons.js"></script>
