--- a/index.html
+++ b/index.html
@@ -15,12 +15,7 @@
 <body>
     <!-- Header -->
     <header class="header flex-header">
-        <a href="#" class="logo">LOGO</a>
-
-        <nav class="nav-list">
-            <input type="search" name="inputSearch" id="input-search">
-            <button class="btn-add-pokemon" data-add-pokemon="pokemon">Cadastrar Pokemon</button>
-        </nav>
+        <h1>Pokedex API</h1>
     </header>
 
     <!-- Container-API -->
