--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <!-- Header -->
     <header class="header flex-header">
         <h1>Pokedex API</h1>
+
+        <input type="search" name="inputSearch" id="input-search" autofocus placeholder="Pesquise algum pokemon...">
     </header>
 
     <!-- Container-API -->
